編集ページの作成

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -32,7 +32,7 @@
   </p>
   
   <p>
-      <%= link_to 'answer', edit_question_answer_path(answer.question, answer) %>
+      <%= link_to 'Edit Answer', edit_question_answer_path(answer.question, answer) %>
   </p>
 <% end %>
 
