--- a/app/views/answers/edit.html.erb
+++ b/app/views/answers/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>answer_edit</h1>
 
-<%= form_with model: [@question, @question.answers.build] do |form| %>
+<%= form_for([@question, @answer], url: question_answer_path(@question, @answer), method: :patch) do |form| %>
     <div>
         <%= form.label :name %><br>
         <%= form.text_field :name %>
