new画面とedit画面に年齢フォームの追加・一覧画面に年齢を表示

--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -12,14 +12,22 @@
     <%= form.label :title %><br>
     <%= form.text_field :title %>
   </div>
+  
   <div>
     <%= form.label :name %><br>
     <%= form.text_field :name %>
   </div>
+  
   <div>
     <%= form.label :content %><br>
     <%= form.text_area :content %>
   </div>
+  
+  <div>
+    <%= form.label :old %><br>
+    <%= form.text_field :old %>
+  </div>
+  
   <div>
     <%= form.submit %>
   </div>
