show画面で年齢の表示

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -11,6 +11,10 @@
   Content:<br>
   <%= @question.content %>
 </p>
+<p>
+  Old:<br>
+  <%= @question.old %>
+</p>
 <h2>Answers</h2>
 <% @question.answers.each do |answer| %>
   <p>
