--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,3 +1,4 @@
+テスト
 <%= form_with model:@question do |form| %>
   <% if @question.errors.any? %>
     <div>
@@ -12,22 +13,22 @@
     <%= form.label :title %><br>
     <%= form.text_field :title %>
   </div>
-  
+
   <div>
     <%= form.label :name %><br>
     <%= form.text_field :name %>
   </div>
-  
+
   <div>
     <%= form.label :content %><br>
     <%= form.text_area :content %>
   </div>
-  
+
   <div>
     <%= form.label :old %><br>
     <%= form.text_field :old %>
   </div>
-  
+
   <div>
     <%= form.submit %>
   </div>
