--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,13 +1,15 @@
+
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 <h1>Questions</h1>
 <%= link_to 'new', new_question_path %>
-<table>
+<table class = "table table-striped table-sm">
   <tr>
-    <th>ID</th>
-    <th>Title</th>
-    <th>Name</th>
-    <th>Content</th>
-    <th>old</th>
-    <th></th>
+    <th scope="row">ID</th>
+    <th scope="row">Title</th>
+    <th scope="row">Name</th>
+    <th scope="row">Content</th>
+    <th scope="row">old</th>
   </tr>
   <% @questions.each do |question|%>
     <tr>
@@ -16,9 +18,9 @@
       <td><%=question.name%></td>
       <td><%=question.content%></td>
       <td><%=question.old %></td>
-      <td><%= link_to 'show', question_path(question) %></td>
-      <td><%= link_to 'edit', edit_question_path(question) %></td>
-      <td><%= link_to 'destroy', question_path(question), data: {turbo_method: 'delete', turbo_confirm: 'Are You Sure?' }%></td>
+      <td ><%= link_to 'show', question_path(question), class: 'btn btn-primary' %></td>
+      <td><%= link_to 'edit', edit_question_path(question), class: 'btn btn-primary' %></td>
+      <td><%= link_to 'destroy', question_path(question), data: {turbo_method: 'delete', turbo_confirm: 'Are You Sure?' }, class: 'btn btn-primary'%></td>
     </tr>
   <%end%>
 </table>
