turbo及びStimulusを検索機能に実装

--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,15 +1,18 @@
 h1
   | Questions
 
-/ransackを利用した検索フォームでは、form_withの代わりにsearch_form_forを使う
-= search_form_for @search do |f|
+/ 検索フォーム
+
+/ data-turbo-frame属性を指定する
+= search_form_for @search,
+  html: {data: { turbo_frame: "question_list",controller: "form", action: "input->form#submit" } } do |f|
 
   /カラム名_contとすることで、カラムに対してLIKEを使った曖昧一致検索をすることができる
   = f.label :name_cont, "名前"
   = f.search_field :name_cont
 
-  / /検索結果と検索フォームをクリアする
-  = link_to "クリア", questions_path
+
+/ テーブル
 
 = link_to 'new', new_question_path
 table
