--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,6 +4,8 @@ html
     title
       | Qanda
     meta[name="viewport" content="width=device-width,initial-scale=1"]
+    / turboキャッシュの無効化
+    meta[name = "turbo-cache-control" content = "no-cache"]
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
