--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,6 +1,8 @@
 h1
-  | Questions
-= link_to 'new', new_question_path
+  | Question
+= link_to "登録", new_question_path,
+                  class: "btn btn-outline-primary",
+                  data: { turbo_frame: "modal"}
 table
   tr
     th
