--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -1,3 +1,3 @@
-h1
-  | New Question
-= render partial: 'form'
+= render "modal" , title: "登録" do
+
+  = render partial: 'form', question: @question
